tests/ui/definition/fail_invalid_int.stderr
error: number too large to fit in target type
 --> tests/ui/definition/fail_invalid_int.rs:1:25
  |
1 | #[obce::definition(id = 0x12345678)]
  |                         ^^^^^^^^^^
